force-app/main/default/objects/Account/fields/AccountCategory__c.field-meta.xml
<CustomField>
    <fullName>AccountCategory__c</fullName>
    <inlineHelpText>Automatic mode target field. Set by the cascade or manually, never via the interface.</inlineHelpText>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central Regulator</fullName>
            </value>
            <value>
                <fullName>Direct Customer</fullName>
            </value>
            <value>
                <fullName>Association Member</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Unclassified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>