force-app/main/default/objects/Account/fields/AccountCategoryDerivedAt__c.field-meta.xml
<CustomField>
    <fullName>AccountCategoryDerivedAt__c</fullName>
    <inlineHelpText>Timestamp of the last automatic derivation.</inlineHelpText>
    <label>Category Derived At</label>
    <type>DateTime</type>
</CustomField>