force-app/main/default/objects/Account/fields/AccountCategoryReason__c.field-meta.xml
<CustomField>
    <fullName>AccountCategoryReason__c</fullName>
    <description>Base code of the classification cascade. Filled in only as long as the category is set to &quot;Unclassified&quot;</description>
    <inlineHelpText>Technical reason why the system was unable to determine a category. This field is automatically populated by the system and cleared once a category has been determined. Do not edit this field manually.</inlineHelpText>
    <label>Category Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>