force-app/main/default/objects/Account/fields/AccountCategorySource__c.field-meta.xml
<CustomField>
    <fullName>AccountCategorySource__c</fullName>
    <inlineHelpText>Manual permanently disables the automatic feature for this account.</inlineHelpText>
    <label>Category Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>