force-app/main/default/objects/Account/fields/AdditionalSalesCookies__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSalesCookies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Sales - Cookies</label>
    <type>Checkbox</type>
</CustomField>