force-app/main/default/objects/Account/fields/AdditionalSalesMilk__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSalesMilk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Sales - Milk</label>
    <type>Checkbox</type>
</CustomField>