force-app/main/default/objects/Account/fields/AdditionalSalesTea__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSalesTea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Sales - Tea</label>
    <type>Checkbox</type>
</CustomField>