force-app/main/default/objects/Account/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single company</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Headquarter</fullName>
            </value>
            <value>
                <fullName>Headquarter &amp; Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>