force-app/main/default/objects/Account/fields/AllGeneralComments__c.field-meta.xml
<CustomField>
    <fullName>AllGeneralComments__c</fullName>
    <label>All General Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>