force-app/main/default/objects/Account/fields/ArchivingReason__c.field-meta.xml
<CustomField>
    <fullName>ArchivingReason__c</fullName>
    <description>Reason why an account (Record Type &quot;Procspect&quot;) is archived.</description>
    <label>Archiving Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No more interest</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Buys from competition</fullName>
            </value>
            <value>
                <fullName>Other reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>