force-app/main/default/objects/Account/fields/AssortmentExtended__c.field-meta.xml
<CustomField>
    <fullName>AssortmentExtended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-1617 Influences visibility of My Products section</description>
    <label>Assortment Extended?</label>
    <type>Checkbox</type>
</CustomField>