force-app/main/default/objects/Account/fields/AssortmentExtendedManual__c.field-meta.xml
<CustomField>
    <fullName>AssortmentExtendedManual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>triggers Assortment Extended without being reset by trigger. CRM-1712</description>
    <label>Assortment Extended Manual</label>
    <type>Checkbox</type>
</CustomField>