force-app/main/default/objects/Account/fields/AssortmentExtensionAutomateBrands__c.field-meta.xml
<CustomField>
    <fullName>AssortmentExtensionAutomateBrands__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-1698</description>
    <label>Assortment Extension: Automate Brands</label>
    <type>Checkbox</type>
</CustomField>