force-app/main/default/objects/Account/fields/BestTimeToReach__c.field-meta.xml
<CustomField>
    <fullName>BestTimeToReach__c</fullName>
    <label>Best Time to Reach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning (9AM-12AM)</fullName>
            </value>
            <value>
                <fullName>Noon (12PM-3PM)</fullName>
            </value>
            <value>
                <fullName>Afternoon (3PM - 6PM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>