force-app/main/default/objects/Account/fields/BlockedForWebshop__c.field-meta.xml
<CustomField>
    <fullName>BlockedForWebshop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked For Webshop</label>
    <type>Checkbox</type>
</CustomField>