force-app/main/default/objects/Account/fields/bofc__BOFC_ACC_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__BOFC_ACC_Name__c</fullName>
    <description>Please don&apos;t delete this field as it will be used in BOFC lead Conversion process</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOFC ACC Name</label>
    <type>Text</type>
</CustomField>