force-app/main/default/objects/Account/fields/BusinessPartnerCategory__c.field-meta.xml
<CustomField>
    <fullName>BusinessPartnerCategory__c</fullName>
    <description>Used by ERP Sync</description>
    <label>Business Partner Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Partner_Category</valueSetName>
    </valueSet>
</CustomField>