force-app/main/default/objects/Account/fields/BusinessPartnerGrouping__c.field-meta.xml
<CustomField>
    <fullName>BusinessPartnerGrouping__c</fullName>
    <description>Used by ERP sync</description>
    <label>Business Partner Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessPartnerGrouping</valueSetName>
    </valueSet>
</CustomField>