force-app/main/default/objects/Account/fields/Callback__c.field-meta.xml
<CustomField>
    <fullName>Callback__c</fullName>
    <label>Callback</label>
    <type>Date</type>
</CustomField>