force-app/main/default/objects/Account/fields/CallFrequency__c.field-meta.xml
<CustomField>
    <fullName>CallFrequency__c</fullName>
    <label>Call Frequency</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>