force-app/main/default/objects/Account/fields/CallRuleNote__c.field-meta.xml
<CustomField>
    <fullName>CallRuleNote__c</fullName>
    <label>Call Rule Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>