force-app/main/default/objects/Account/fields/CallRuleType__c.field-meta.xml
<CustomField>
    <fullName>CallRuleType__c</fullName>
    <label>Call Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Observe by ZKS</fullName>
            </value>
            <value>
                <fullName>Call by ZKS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>