force-app/main/default/objects/Account/fields/CallRuleWeekRhythm__c.field-meta.xml
<CustomField>
    <fullName>CallRuleWeekRhythm__c</fullName>
    <label>Call Rule Week Rhythm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WO-1-VW</fullName>
            </value>
            <value>
                <fullName>WO-2-VW</fullName>
            </value>
            <value>
                <fullName>WO-3-VW</fullName>
            </value>
            <value>
                <fullName>WO-4-VW</fullName>
            </value>
            <value>
                <fullName>WO-5-VW</fullName>
            </value>
            <value>
                <fullName>WO-6-VW</fullName>
            </value>
            <value>
                <fullName>WO-7-VW</fullName>
            </value>
            <value>
                <fullName>WO-8-VW</fullName>
            </value>
            <value>
                <fullName>WO-12-VW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>