force-app/main/default/objects/Account/fields/CentralRegulator__c.field-meta.xml
<CustomField>
    <fullName>CentralRegulator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Regulator Reference. Incoming references designate the target as the central regulator (Switch 2).</inlineHelpText>
    <label>Central Regulator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Central Regulator)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>