force-app/main/default/objects/Account/fields/ChainParentConditionID__c.field-meta.xml
<CustomField>
    <fullName>ChainParentConditionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chain Parent Condition ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Chain Parent Condition ID__c)</relationshipLabel>
    <relationshipName>ConditionChild</relationshipName>
    <type>Lookup</type>
</CustomField>