force-app/main/default/objects/Account/fields/ChainParentReimbursementID__c.field-meta.xml
<CustomField>
    <fullName>ChainParentReimbursementID__c</fullName>
    <label>Chain Parent Reimbursement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>