force-app/main/default/objects/Account/fields/ChainRole__c.field-meta.xml
<CustomField>
    <fullName>ChainRole__c</fullName>
    <label>Chain Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ChainRole</valueSetName>
    </valueSet>
</CustomField>