force-app/main/default/objects/Account/fields/ChainType__c.field-meta.xml
<CustomField>
    <fullName>ChainType__c</fullName>
    <formula>TEXT(CurrentAccountCondition__r.OwnOrderingRightState__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chain Type</label>
    <type>Text</type>
</CustomField>