force-app/main/default/objects/Account/fields/CheckboxCallbackToday__c.field-meta.xml
<CustomField>
    <fullName>CheckboxCallbackToday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks, when a callback date is entered is is &quot;today&quot; - used for flow to reopen leads</description>
    <label>Checkbox Callback Today</label>
    <type>Checkbox</type>
</CustomField>