force-app/main/default/objects/Account/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Dieses Feld dient dazu, Bemerkungen zu erfassen und kann auch in Berichten genutzt werden, um relevante Informationen direkt zu erfassen.</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>