force-app/main/default/objects/Account/fields/CompanySize__c.field-meta.xml
<CustomField>
    <fullName>CompanySize__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small hotel / Boutique hotel</fullName>
            </value>
            <value>
                <fullName>Medium size hotel (20-50 rooms)</fullName>
            </value>
            <value>
                <fullName>Large hotel / Hotel chain</fullName>
            </value>
            <value>
                <fullName>Wellness hotel</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Cafe / Bar</fullName>
            </value>
            <value>
                <fullName>Food stand</fullName>
            </value>
            <value>
                <fullName>Food truck / Street food</fullName>
            </value>
            <value>
                <fullName>Communal feeding</fullName>
            </value>
            <value>
                <fullName>System catering</fullName>
            </value>
            <value>
                <fullName>Travel catering</fullName>
            </value>
            <value>
                <fullName>Family owned</fullName>
            </value>
            <value>
                <fullName>Multiple branches</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Bakery chain</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>