force-app/main/default/objects/Account/fields/CompleteDelivery__c.field-meta.xml
<CustomField>
    <fullName>CompleteDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Delivery</label>
    <type>Checkbox</type>
</CustomField>