force-app/main/default/objects/Account/fields/ConditionChainHead__c.field-meta.xml
<CustomField>
    <fullName>ConditionChainHead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition Chain Head</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Condition Chain Head)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>