force-app/main/default/objects/Account/fields/ConditionChainParent__c.field-meta.xml
<CustomField>
    <fullName>ConditionChainParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition Chain Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Condition Chain Parent)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>