force-app/main/default/objects/Account/fields/CreatedviaCaseScreenflow__c.field-meta.xml
<CustomField>
    <fullName>CreatedviaCaseScreenflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created via Case Screenflow</label>
    <type>Checkbox</type>
</CustomField>