force-app/main/default/objects/Account/fields/CreateOrActivateBuyerAccount__c.field-meta.xml
<CustomField>
    <fullName>CreateOrActivateBuyerAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Or Activate Buyer Account</label>
    <type>Checkbox</type>
</CustomField>