force-app/main/default/objects/Account/fields/CurrentAccountCondition__c.field-meta.xml
<CustomField>
    <fullName>CurrentAccountCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Account Condition</label>
    <referenceTo>AccountConditions__c</referenceTo>
    <relationshipLabel>Current Account Condition</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>