force-app/main/default/objects/Account/fields/CustomerGroup2__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup2__c</fullName>
    <label>Customer Group 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MLI</fullName>
                <label>Condition Authority KAM</label>
            </value>
            <value>
                <fullName>KLI</fullName>
                <label>Condition Authority KAM &amp; Sales Area Manager</label>
            </value>
            <value>
                <fullName>EKU</fullName>
                <label>Condition Authority Sales Area Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>