force-app/main/default/objects/Account/fields/CustomerPricingProcedure__c.field-meta.xml
<CustomField>
    <fullName>CustomerPricingProcedure__c</fullName>
    <label>Customer Pricing Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Standard incl. VAT</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Standard PUK</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Standard PUK incl. VAT</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Condition/Contract Settlement</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>EDEKA Warehouse</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>EDEKA Direct Delivery</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Customer Standard (ISHTSW)</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>EDEKA Central Warehouse</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>REWE_Penny</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Müller Central Warehouse</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Brülle &amp; Schmelzer</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Kaufland Central Warehouse</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>NE Weight-Dependent</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NE Standard</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>RTG Group Central Warehouse</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Wasgau C+C</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Metro Central Warehouse</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>DRM Customer</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>LIDL Norma ALDI</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>AECMA Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>