force-app/main/default/objects/Account/fields/CustomerReferenceID__c.field-meta.xml
<CustomField>
    <fullName>CustomerReferenceID__c</fullName>
    <externalId>true</externalId>
    <label>Customer Reference ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>