force-app/main/default/objects/Account/fields/CustomerTaxClassification__c.field-meta.xml
<CustomField>
    <fullName>CustomerTaxClassification__c</fullName>
    <label>Customer Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>19%</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>0%</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>9,5%</label>
            </value>
            <value>
                <fullName>1124</fullName>
                <isActive>false</isActive>
                <label>1124</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>